add selectedqueries query param
